# samn2

./: .gitignore  .gitmodules  Cargo.toml  ids.json  rustfmt.toml
.cargo/: config.toml
boards/nrf24_test/: Cargo.toml
boards/nrf24_test/.cargo/: config.toml
boards/samn8/: Cargo.toml
boards/samn8/.cargo/: config.toml
boards/samn8/src/: lib.rs
boards/samn9/: Cargo.toml
boards/samn9/.cargo/: config.toml
boards/samn9/src/: lib.rs
boards/samn_dc/: Cargo.toml
boards/samn_dc/src/: lib.rs  mypanic.rs
boards/samn_switch/: Cargo.toml
boards/samn_switch/src/: lib.rs  mypanic.rs
boards/specs/: avr-atmega328pb.json
boards/uno/: Cargo.toml
boards/uno/.cargo/: config.toml
boards/uno/src/: millis.rs
scripts/: deploy.nu  fuses.nu  source.nu
src/: lib.rs  radio.rs
