[workspace]
members = [
    "boards/samn9","boards/samn8","boards/uno"
]
exclude = [
    "avr-hal/*"
]
resolver = "2"

[workspace.dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1"
pwm-pca9685 = "0.3.1"
embedded-storage = "0.2"
embedded-io = "0.6.1"
avr-device = "0.5.4"
either = {version = "1.6.1", default-features = false}
cc1101 = {path = "cc1101"}
embedded-hal-bus = "0.1.0"
embedded-nrf24l01 = {path = "embedded-nrf24l01"}
panic-serial = { version = "0.1.2", features = ["full"] }
heapless = {version = "0.8", features = ["serde", "ufmt"]}
serde = {version = "1.0.197", default-features = false}
postcard = {git = "https://github.com/jamesmunns/postcard.git"}
samn-common = {path = "samn-common"}




[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
