[workspace]
members = [
    "boards/samn9","boards/samn8","boards/uno","boards/samn_dc","boards/samn_switch"
]
exclude = [
    "avr-hal/*"
]
resolver = "2"

[workspace.dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1"
pwm-pca9685 = "0.3.1"
embedded-storage = "0.2"
embedded-io = "0.6.1"
avr-device = "0.5.4"
either = {version = "1.6.1", default-features = false}
embedded-hal-bus = "0.1.0"
panic-serial = { version = "0.1.2", features = ["full"] }
heapless = {version = "0.8", features = ["serde", "ufmt"]}
serde = {version = "1.0.197", default-features = false}
postcard = {git = "https://github.com/jamesmunns/postcard.git"}
samn-common = {path = "samn-common"}




[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = "fat"
opt-level = "s"
