[package]
name = "samn8"
version = "0.1.0"
edition = "2021"


[dependencies]
arduino-hal = {path = "../../avr-hal/arduino-hal", features = ["samn8"]}
panic-halt = {workspace = true}
ufmt = {workspace = true}
nb = {workspace = true}
embedded-hal = {workspace = true}
avr-device = {workspace = true}
embedded-hal-bus = {workspace = true}
panic-serial = {workspace = true}
heapless = {workspace = true}
serde = {workspace = true}
postcard = {workspace = true}
samn-common = {workspace=true}