[package]
name = "samn9"
version = "0.1.0"
edition = "2021"

[dependencies]
arduino-hal = {path = "../../avr-hal/arduino-hal", features = ["samn9"]}
panic-halt = {workspace = true}
# ufmt = {workspace = true}
nb = {workspace = true}
embedded-hal = {workspace = true}
avr-device = {workspace = true}
embedded-hal-bus = {workspace = true}
# panic-serial = {workspace = true}
# heapless = {workspace = true}
# serde = {workspace = true}
# postcard = {workspace = true}
samn-common = {path = "../../samn-common", features = ["nrf24", "cc1101"]}
dht11 = "0.3.1"
# ufmt_float = "0.2.0"
bme280 = {git = "https://github.com/rubend056/bme280.git"}
