[package]
name = "samn_dc"
version = "0.1.0"
edition = "2021"

[dependencies]
arduino-hal = {path = "../../avr-hal/arduino-hal", features = ["samn_dc"]}
nb = {workspace = true}
embedded-hal = {workspace = true}
avr-device = {workspace = true}
embedded-hal-bus = {workspace = true}
samn-common = {path = "../../samn-common", features = ["nrf24"]}
