[package]
name = "uno"
version = "0.1.0"
edition = "2021"

[dependencies]
arduino-hal = {path = "../../avr-hal/arduino-hal", features = ["arduino-uno"]}
panic-halt = {workspace = true}
ufmt = {workspace = true}
nb = {workspace = true}
embedded-hal = {workspace = true}
pwm-pca9685 = {workspace = true}
embedded-storage = {workspace = true}
embedded-io = {workspace = true}
avr-device = {workspace = true}
either = {workspace = true}
cc1101 = {workspace = true}
embedded-hal-bus = {workspace = true}
embedded-nrf24l01 = {workspace = true}
panic-serial = {workspace = true}
heapless = {workspace = true}
serde = {workspace = true}
postcard = {workspace = true}
samn-common = {workspace=true}